--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "expo-video": "^3.0.14",
     "expo-web-browser": "^15.0.9",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.81.5",
