--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-native": "^0.81.5",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
