--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
+    "styled-components": "^6.1.19",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
