--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,14 @@
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "chai": "^6.2.1",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
     "tesseract.js": "^6.0.1"
   },
