--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-native": "^0.81.5",
+    "react-native-calendars": "^1.1313.0",
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
