--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.11",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
