A pop-up needs to come when the company is registered, if there is some field missing, another pop-up needs to be there regarding that. - fixed

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -54,7 +54,23 @@
         }
       ],
       "expo-video",
-      "expo-font"
+      "expo-font",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Allow $(PRODUCT_NAME) to access your photos",
+          "saveToPhotosPermission": "Allow $(PRODUCT_NAME) to save photos to your gallery",
+          "isAccessMediaLocationEnabled": true
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
