fixed icons issue

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -70,7 +70,8 @@
           "saveToPhotosPermission": "Allow $(PRODUCT_NAME) to save photos to your gallery",
           "isAccessMediaLocationEnabled": true
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
