--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,32 +19,32 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
-    "expo": "^54.0.23",
-    "expo-av": "^16.0.7",
-    "expo-blur": "^15.0.7",
-    "expo-build-properties": "^1.0.9",
-    "expo-camera": "^17.0.9",
+    "expo": "~54.0.27",
+    "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
+    "expo-build-properties": "~1.0.10",
+    "expo-camera": "~17.0.10",
     "expo-constants": "^18.0.10",
-    "expo-dev-client": "^6.0.17",
-    "expo-document-picker": "^14.0.7",
+    "expo-dev-client": "~6.0.20",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "^19.0.17",
     "expo-font": "^14.0.9",
-    "expo-haptics": "^15.0.7",
-    "expo-image": "^3.0.10",
-    "expo-image-picker": "^17.0.8",
-    "expo-linear-gradient": "^15.0.7",
-    "expo-linking": "^8.0.8",
-    "expo-location": "^19.0.7",
-    "expo-media-library": "^18.2.0",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.9",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-location": "~19.0.8",
+    "expo-media-library": "~18.2.1",
     "expo-mlkit-ocr": "^2.0.1",
-    "expo-modules-core": "~3.0.25",
-    "expo-router": "^6.0.14",
-    "expo-splash-screen": "^31.0.10",
-    "expo-status-bar": "^3.0.8",
-    "expo-symbols": "^1.0.7",
-    "expo-system-ui": "^6.0.8",
-    "expo-video": "^3.0.14",
-    "expo-web-browser": "^15.0.9",
+    "expo-modules-core": "~3.0.28",
+    "expo-router": "~6.0.17",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-video": "~3.0.15",
+    "expo-web-browser": "~15.0.10",
     "lodash": "^4.17.21",
     "lucide-react": "^0.554.0",
     "react": "^19.1.0",
