--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
+    "socket.io": "^4.8.1",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
