--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
     "react-router-dom": "^7.9.6",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.19",
     "xlsx": "^0.18.5"
   },
